# adventOfCode

./: .gitignore  .project-settings.yml  AdventOfCode.cabal  README.md
2015/: AdventOfCode.cabal  stack.yaml
2015/src/Day03/: Delivery.hs
2015/src/Day07/: Parsers.hs
2015/src/Day12/: Json.hs
2015/test/Day01/: ParanthesesSpec.hs
2015/test/Day03/: DeliverySpec.hs
2015/test/Day04/: AdventCoinsSpec.hs
2015/test/Day05/: NiceStringsSpec.hs
2015/test/Day06/: ParsersSpec.hs
2015/test/Day07/: WiresSpec.hs
2015/test/Day09/: DistanceSpec.hs
2015/test/Day11/: PasswordsSpec.hs
2015/test/Year2015/Day01/: ParanthesesSpec.hs
2016/: AdventOfCode2016.cabal
2016/src/Day01/: EasterBunnyHeadquarters.hs
2016/src/Day02/: BathroomSecurity.hs
2016/src/Day03/: Triangles.hs
2016/src/Day04/: RoomNames.hs  data.txt
2016/src/Enum/: Bounded.hs
2016/test/Day01/: EasterBunnyHeadquartersSpec.hs
2016/test/Day02/: BathroomSecuritySpec.hs
2016/test/Day04/: RoomNamesSpec.hs
Day01/: Specs.hs
Day02/: GiftWrap.hs  Specs.hs
Day03/: Delivery.hs  Specs.hs
Day04/: Specs.hs
Day05/: NiceStrings.hs  Specs.hs
Day06/: Parsers.hs  Specs.hs
Day07/: Specs.hs
Day08/: Specs.hs
Day09/: Parsers.hs  Specs.hs
Day1/: Parantheses.hs  Specs.hs
Day10/: LookAndSay.hs  Specs.hs
Day2/: GiftWrap.hs  Specs.hs
Day3/: Delivery.hs  Specs.hs
Day4/: AdventCoins.hs  Specs.hs
Day5/: NiceStrings.hs  Specs.hs
Day6/: Lights.hs  Parsers.hs  Specs.hs
Day7/: Parsers.hs  Specs.hs  Wires.hs
Day8/: DigitalList.hs  Specs.hs
Day9/: Distance.hs  Parsers.hs  Specs.hs
day5/: Specs.hs
src/Day01/: Parantheses.hs
src/Day04/: AdventCoins.hs
src/Day06/: Lights.hs
src/Day07/: Wires.hs
src/Day08/: DigitalList.hs
src/Day09/: Distance.hs
src/Day11/: Passwords.hs
src/Day12/: Json.hs
test/Day02/: GiftWrapSpec.hs
test/Day08/: DigitalListSpec.hs
test/Day09/: ParsersSpec.hs
test/Day10/: LookAndSaySpec.hs
test/Day11/: PasswordsSpec.hs
