name:                AdventOfCode2016
version:             0.1.0.0
synopsis:            Haskell Solutions for Advent of Code 2016
description:         Please see README.md
homepage:            https://github.com/cvk77/adventOfCode/
license:             PublicDomain
author:              Christoph von Krüchten
maintainer:          christoph@vonkruechten.de
copyright:           2015 Christoph von Krüchten
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day01.EasterBunnyHeadquarters,
                       Enum.Bounded
  build-depends:       base >= 4.7 && < 5
                     , split >= 0.2
                     , containers >= 0.5
  default-language:    Haskell2010

test-suite AdventOfCode2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AdventOfCode2016
                     , hspec-discover
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:cvk77/adventOfCode.git
